--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liyanyan/chat-ui",
-  "version": "1.2.0",
+  "version": "1.1.0",
   "description": "A React UI Library.",
   "keywords": [],
   "homepage": "https://github.com/liyanyan123456/react-ui-library-tutorial#readme",
@@ -62,6 +62,8 @@
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/cssinjs-utils": "^1.1.3",
     "@babel/runtime": "^7",
+    "@emotion/react": "^11.14.0",
+    "animated-scroll-to": "^2.3.2",
     "antd": "^5.25.4",
     "classnames": "^2.5.1"
   },
