--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liyanyan/chat-ui",
+  "name": "@liyanyan123/chat-ui",
   "version": "1.1.0",
   "description": "A React UI Library.",
   "keywords": [],
